# pilos-dashboard

./: .gitignore  README-TAURI.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/api/agents/definitions/: route.ts
app/api/agents/stream/: route.ts
app/api/agents/ws/: route.ts
app/api/data-sources/: route.ts
app/api/mcp/servers/: route.ts
app/api/projects/: route.ts
app/api/projects/[id]/: route.ts
app/api/projects/[id]/add-note/: route.ts
app/api/projects/[id]/changelog/: route.ts
app/api/projects/[id]/log-activity/: route.ts
app/api/terminal/: route.ts
app/api/workflows/: route.ts
components/agents/: agent-creator-dialog.tsx  agent-workflow.tsx  model-selector.tsx
components/analytics/: analytics-dashboard.tsx  cost-chart.tsx  usage-stats.tsx
components/chat/: chat-interface.tsx  message-bubble.tsx  message-input.tsx
components/dashboard/: agent-panel.tsx  cost-tracker.tsx  header.tsx  improvements-panel.tsx  integrations-panel.tsx  project-browser.tsx  settings-panel.tsx  terminal-panel.tsx
components/data-sources/: data-source-browser.tsx  data-source-card.tsx  data-source-creator.tsx
components/mcp/: mcp-browser.tsx  mcp-card.tsx  mcp-category-filter.tsx
components/ui/: loading.tsx  tabs.tsx
lib/: mcp-catalog.ts
lib/server/: pilos-mcp.ts
scripts/: prepare-standalone.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
