[package]
name = "pilos-dashboard"
version = "0.1.0"
description = "PILOS Agent System Dashboard – a fast desktop app powered by Tauri"
authors = []
license = ""
repository = ""
default-run = "pilos-dashboard"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pilos_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
